<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    app:cardCornerRadius="20dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp">

        <ImageView
            android:id="@+id/imageView_photo"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp" />

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_90sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/gray"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_name"
            android:layout_marginStart="@dimen/_90sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="sans-serif"
            android:text="@string/status"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/textView_species"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_status"
            android:layout_marginStart="@dimen/_90sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="sans-serif"
            android:text="@string/species"
            android:textSize="@dimen/_12sdp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>