<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_80sdp"
    android:layout_marginStart="@dimen/_8sdp"
    android:layout_marginEnd="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_18sdp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp">

        <ImageView
            android:id="@+id/imageView_photo"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/ic_launcher_background"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="-1dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_name"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_12sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/gray"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView_status"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView_status"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_10sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:fontFamily="sans-serif"
                android:text="@string/status"
                android:textSize="@dimen/_8sdp"
                app:layout_constraintBottom_toTopOf="@+id/textView_species"
                app:layout_constraintStart_toEndOf="@+id/imageView_photo"
                app:layout_constraintTop_toTopOf="@+id/textView_name"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView_species"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_10sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_4sdp"
                android:fontFamily="sans-serif"
                android:text="@string/species"
                android:textSize="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="34dp" />
        </LinearLayout>
        <Button
            android:id="@+id/favBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/favorite_red"
            android:layout_marginStart="@dimen/_100sdp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>